Implemented swipe-left feature: full dislike of property and roommates
